Fix spacing on header logo & sub-nav

--- a/wp-content/themes/hmr-theme/assets/css/less/app.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/app.less
@@ -144,9 +144,10 @@ em {
 		display:block;
 		background:url(@sprite) no-repeat left top;
 		.hide-text();
-		margin:15px auto;
+		margin:15px auto 25px auto;
 	}
 	border-bottom:2px solid @blue;
+	padding:0 0 15px 0;
 }
 
 
